--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "cron": "^2.0.0",
     "dotenv": "^16.0.1",
-    "moment": "^2.29.3"
+    "moment": "^2.29.3",
+    "simple-ssh": "^1.1.1"
   }
 }
