--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pkg": "pkg . -o ./hiveos-dist/zic_damominer_v1.0.1/zic_damominer_v1.0.1 && cp h-manifest.conf ./hiveos-dist/zic_damominer_v1.0.1 && cd ./hiveos-dist && tar -czf zic_damominer_v1.0.1.tar.gz zic_damominer_v1.0.1"
+    "pkg": "pkg . -o ./hiveos-dist/zic_damominer_v1.0.1/zic_damominer && cp h-manifest.conf ./hiveos-dist/zic_damominer_v1.0.1 && cd ./hiveos-dist && tar -czf zic_damominer_v1.0.1.tar.gz zic_damominer_v1.0.1"
   },
   "keywords": [
     "zic",
